# i-want-my-mtg

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  Dockerfile  Pricing Page.html  README.md  ROADMAP.md  Summary Checklist.md  blocks.txt  bonus-set-types-analysis.md  booster_promo_types.csv  deck_boosterTypes.csv  default_boosterTypes.csv  deploy-script-example.sh  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  empty_boosterTypes.csv  empty_promoTypes.csv  handoff.md  has_promoTypes.csv  index.html  lighthouse-tool-instructions.txt  nest-cli.json  openapi-public.json  package-lock.json  package.json  parsing-filter-notes.txt  partitioning-migrations-example.txt  playwright.config.ts  promo_type_analysis.json  renameFiles.py  scry-example-script.sh  set-card-counts.txt  set-notes-1 copy.txt  (+11 more)
.claude/: playwright-e2e-plan.md  refinement-plan.md  sealed-product-plan.md  settings.json  settings.local.json
client/: package.json
cron/: clean_logs.sh  i-want-my-mtg  scry.sh
docs/: 6.1-buylist-price-data-spike.html  (+10 more)
scry/: CLAUDE.md  Cargo.toml  Dockerfile
scry/src/: DELETE ME.txt  api.rs  card.rs  cli.rs  clients.rs  config.rs  database.rs  health_check.rs  jobs.rs  main.rs  models.rs  portfolio.rs  price.rs  services.rs  set.rs  shared.rs  utils.rs
scry/src/api/: scry_api.rs
scry/src/card/: client.rs  domain.rs  event_processor.rs  ingestion_service.rs  legality.rs  legality_status.rs  mapper.rs  models.rs  repository.rs  service.rs  stream_parser.rs
scry/src/card/domain/: card.rs  card_number.rs  card_rarity.rs  format.rs  in_main_classifier.rs  legality.rs  legality_status.rs  main_set_classifier.rs
scry/src/card/models/: card.rs  card_rarity.rs  format.rs  legality.rs  raw_card.rs
scry/src/card_ingestion/: client.rs  mapper.rs  models.rs  repository.rs  service.rs
scry/src/cli/: commands.rs  controller.rs
scry/src/clients/: mtg_json.rs
scry/src/database/: connection.rs  repositories.rs  service.rs
scry/src/database/repositories/: card.rs  legality.rs  price.rs  set.rs
scry/src/health_check/: models.rs  service.rs
scry/src/jobs/: price_archiver.rs  scheduler.rs
scry/src/models/: card.rs  card_rarity.rs  legality.rs  set.rs
scry/src/portfolio/: domain.rs  repository.rs  service.rs
scry/src/portfolio/domain/: portfolio_summary.rs  portfolio_value_snapshot.rs
scry/src/price/: archival_service.rs  client.rs  domain.rs  event_processor.rs  historical_event_processor.rs  ingestion_service.rs  mapper.rs  models.rs  repository.rs  service.rs  stream_parser.rs
scry/src/price/domain/: price.rs  price_accumulator.rs
scry/src/price_management/: archival_service.rs  ingestion_service.rs
scry/src/services/: ingestion.rs  orchestrator.rs  price_archiver.rs  scheduler.rs
scry/src/set/: client.rs  ingestion_service.rs  mapper.rs  models.rs  repository.rs  service.rs
scry/src/set/domain/: set.rs  set_price.rs
scry/src/set/models/: set_price.rs
scry/src/shared/: http_client.rs
scry/src/utils/: http_client.rs  json.rs  json_stream_parser.rs  streaming.rs
(+1790 files in other folders)
