[package]
name = "scry"
version = "0.1.0"
edition = "2021"
description = "MTG data ETL management tool"

[[bin]]
name = "scry"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
bytes = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = { version = "1.0", features = ["serde"] }
tokio-util = "0.7.15"
futures = "0.3.31"

[dependencies.clap]
version = "4.0"
features = ["derive"]
