[package]
name = "scry"
version = "0.1.0"
edition = "2021"
description = "MTG data ETL management tool"

[[bin]]
name = "scry"
path = "src/main.rs"

[dependencies]
actson = "0.2.0"
anyhow = "1.0"
async-stream = "0.3"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
dialoguer = "0.11.0"
dotenvy = "0.15"
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json", "stream"] }
rust_decimal = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal", "macros"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.10"
tokio-stream = "0.1"
tokio-util = { version = "0.7.15", features = ["compat", "io"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dependencies.clap]
version = "4.0"
features = ["derive"]
